--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="jquery-3.7.1.js"></script>
     <title>Document</title>
+    <style>
+        div{
+            height: 200px;
+            border: 2px solid black;
+            padding: 20px;
+            /* float: left; */
+            margin: 0 40px;
+            width: 300px;
+            background-color: rebeccapurple;
+            margin-top: 30px;
+            position: absolute;
+        }
+    </style>
 </head>
 <body>
-    <p>1</p>
-    <p>2</p>
-    <p>3</p>
-    <script src="script.js"></script>
+    <input type="button" value=">>">
+    <input type="button" value="<<">
+    
+   <div>div1</div>
+    <script src="/script.js"></script>
 </body>
 </html>
